precompiles/utils/macro/tests/precompile/compile-fail/pre-check/wrong-parameter.stderr
error: This parameter must have type `&mut impl PrecompileHandle`
  --> tests/precompile/compile-fail/pre-check/wrong-parameter.rs:23:18
   |
23 |     fn pre_check(_: u32) {
   |                     ^^^
